Fix flickering when counters appear.

--- a/src/styles/birman/index.styl
+++ b/src/styles/birman/index.styl
@@ -45,7 +45,7 @@ hover-button(button, color, text=null) {
 
 	&__button,
 	&__counter {
-		vertical-align:middle;
+		vertical-align:baseline;
 		font-family:"Helvetica Neue", Arial, sans-serif;
 		font-size:13px;
 		line-height:18px;
@@ -54,7 +54,7 @@ hover-button(button, color, text=null) {
 
 	&__button {
 		margin:-1px;
-		padding:1px 6px 1px 20px;
+		padding:1px 6px 2px 20px;
 		font-weight:normal;
 		border-right:0;
 	}
